--- a/notebooks/02_AdaBoost.ipynb
+++ b/notebooks/02_AdaBoost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 115,
    "id": "5445d5c1",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 116,
    "id": "ddc7d9d0",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 117,
    "id": "c9638282",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 118,
    "id": "11c19729",
    "metadata": {},
    "outputs": [
@@ -50,15 +50,15 @@
       " #   Column                    Non-Null Count  Dtype  \n",
       "---  ------                    --------------  -----  \n",
       " 0   Pregnancies               768 non-null    int64  \n",
-      " 1   Glucose                   768 non-null    float64\n",
-      " 2   BloodPressure             768 non-null    float64\n",
-      " 3   SkinThickness             768 non-null    float64\n",
-      " 4   BMI                       768 non-null    float64\n",
-      " 5   DiabetesPedigreeFunction  768 non-null    float64\n",
-      " 6   Age                       768 non-null    int64  \n",
-      " 7   Outcome                   768 non-null    int64  \n",
-      " 8   Insulin_log               768 non-null    float64\n",
-      "dtypes: float64(6), int64(3)\n",
+      " 1   Glucose                   768 non-null    int64  \n",
+      " 2   BloodPressure             768 non-null    int64  \n",
+      " 3   SkinThickness             768 non-null    int64  \n",
+      " 4   Insulin                   768 non-null    int64  \n",
+      " 5   BMI                       768 non-null    float64\n",
+      " 6   DiabetesPedigreeFunction  768 non-null    float64\n",
+      " 7   Age                       768 non-null    int64  \n",
+      " 8   Outcome                   768 non-null    int64  \n",
+      "dtypes: float64(2), int64(7)\n",
       "memory usage: 54.1 KB\n"
      ]
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 119,
    "id": "e275e557",
    "metadata": {},
    "outputs": [
@@ -98,11 +98,11 @@
        "      <th>Glucose</th>\n",
        "      <th>BloodPressure</th>\n",
        "      <th>SkinThickness</th>\n",
+       "      <th>Insulin</th>\n",
        "      <th>BMI</th>\n",
        "      <th>DiabetesPedigreeFunction</th>\n",
        "      <th>Age</th>\n",
        "      <th>Outcome</th>\n",
-       "      <th>Insulin_log</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -121,62 +121,62 @@
        "    <tr>\n",
        "      <th>mean</th>\n",
        "      <td>3.845052</td>\n",
-       "      <td>121.656250</td>\n",
-       "      <td>72.386719</td>\n",
-       "      <td>29.108073</td>\n",
-       "      <td>32.455208</td>\n",
+       "      <td>120.894531</td>\n",
+       "      <td>69.105469</td>\n",
+       "      <td>20.536458</td>\n",
+       "      <td>79.799479</td>\n",
+       "      <td>31.992578</td>\n",
        "      <td>0.471876</td>\n",
        "      <td>33.240885</td>\n",
        "      <td>0.348958</td>\n",
-       "      <td>4.827137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
        "      <td>3.369578</td>\n",
-       "      <td>30.438286</td>\n",
-       "      <td>12.096642</td>\n",
-       "      <td>8.791221</td>\n",
-       "      <td>6.875177</td>\n",
+       "      <td>31.972618</td>\n",
+       "      <td>19.355807</td>\n",
+       "      <td>15.952218</td>\n",
+       "      <td>115.244002</td>\n",
+       "      <td>7.884160</td>\n",
        "      <td>0.331329</td>\n",
        "      <td>11.760232</td>\n",
        "      <td>0.476951</td>\n",
-       "      <td>0.494893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>0.000000</td>\n",
-       "      <td>44.000000</td>\n",
-       "      <td>24.000000</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>18.200000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.078000</td>\n",
        "      <td>21.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>2.708050</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>99.750000</td>\n",
-       "      <td>64.000000</td>\n",
-       "      <td>25.000000</td>\n",
-       "      <td>27.500000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>62.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>27.300000</td>\n",
        "      <td>0.243750</td>\n",
        "      <td>24.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>4.808086</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>3.000000</td>\n",
        "      <td>117.000000</td>\n",
        "      <td>72.000000</td>\n",
-       "      <td>29.000000</td>\n",
-       "      <td>32.300000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>30.500000</td>\n",
+       "      <td>32.000000</td>\n",
        "      <td>0.372500</td>\n",
        "      <td>29.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>4.836282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -184,11 +184,11 @@
        "      <td>140.250000</td>\n",
        "      <td>80.000000</td>\n",
        "      <td>32.000000</td>\n",
+       "      <td>127.250000</td>\n",
        "      <td>36.600000</td>\n",
        "      <td>0.626250</td>\n",
        "      <td>41.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>4.853976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -196,39 +196,39 @@
        "      <td>199.000000</td>\n",
        "      <td>122.000000</td>\n",
        "      <td>99.000000</td>\n",
+       "      <td>846.000000</td>\n",
        "      <td>67.100000</td>\n",
        "      <td>2.420000</td>\n",
        "      <td>81.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>6.741701</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Pregnancies     Glucose  BloodPressure  SkinThickness         BMI  \\\n",
+       "       Pregnancies     Glucose  BloodPressure  SkinThickness     Insulin  \\\n",
        "count   768.000000  768.000000     768.000000     768.000000  768.000000   \n",
-       "mean      3.845052  121.656250      72.386719      29.108073   32.455208   \n",
-       "std       3.369578   30.438286      12.096642       8.791221    6.875177   \n",
-       "min       0.000000   44.000000      24.000000       7.000000   18.200000   \n",
-       "25%       1.000000   99.750000      64.000000      25.000000   27.500000   \n",
-       "50%       3.000000  117.000000      72.000000      29.000000   32.300000   \n",
-       "75%       6.000000  140.250000      80.000000      32.000000   36.600000   \n",
-       "max      17.000000  199.000000     122.000000      99.000000   67.100000   \n",
+       "mean      3.845052  120.894531      69.105469      20.536458   79.799479   \n",
+       "std       3.369578   31.972618      19.355807      15.952218  115.244002   \n",
+       "min       0.000000    0.000000       0.000000       0.000000    0.000000   \n",
+       "25%       1.000000   99.000000      62.000000       0.000000    0.000000   \n",
+       "50%       3.000000  117.000000      72.000000      23.000000   30.500000   \n",
+       "75%       6.000000  140.250000      80.000000      32.000000  127.250000   \n",
+       "max      17.000000  199.000000     122.000000      99.000000  846.000000   \n",
        "\n",
-       "       DiabetesPedigreeFunction         Age     Outcome  Insulin_log  \n",
-       "count                768.000000  768.000000  768.000000   768.000000  \n",
-       "mean                   0.471876   33.240885    0.348958     4.827137  \n",
-       "std                    0.331329   11.760232    0.476951     0.494893  \n",
-       "min                    0.078000   21.000000    0.000000     2.708050  \n",
-       "25%                    0.243750   24.000000    0.000000     4.808086  \n",
-       "50%                    0.372500   29.000000    0.000000     4.836282  \n",
-       "75%                    0.626250   41.000000    1.000000     4.853976  \n",
-       "max                    2.420000   81.000000    1.000000     6.741701  "
+       "              BMI  DiabetesPedigreeFunction         Age     Outcome  \n",
+       "count  768.000000                768.000000  768.000000  768.000000  \n",
+       "mean    31.992578                  0.471876   33.240885    0.348958  \n",
+       "std      7.884160                  0.331329   11.760232    0.476951  \n",
+       "min      0.000000                  0.078000   21.000000    0.000000  \n",
+       "25%     27.300000                  0.243750   24.000000    0.000000  \n",
+       "50%     32.000000                  0.372500   29.000000    0.000000  \n",
+       "75%     36.600000                  0.626250   41.000000    1.000000  \n",
+       "max     67.100000                  2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 120,
    "id": "b113c3be",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 121,
    "id": "afe00143",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 122,
    "id": "c3db6cd3",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 123,
    "id": "7cfd3eea",
    "metadata": {},
    "outputs": [
@@ -434,13 +434,98 @@
        "max                    2.420000   81.000000    1.000000     6.741701  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "162964a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "51b4a548",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop(['Outcome'], axis=1)  # Features\n",
+    "y = df['Outcome']                 # Target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "2a190a08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "6319ac5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\POWER\\anaconda3\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:527: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AdaBoost Accuracy: 0.7597402597402597\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.79      0.81        99\n",
+      "           1       0.65      0.71      0.68        55\n",
+      "\n",
+      "    accuracy                           0.76       154\n",
+      "   macro avg       0.74      0.75      0.74       154\n",
+      "weighted avg       0.77      0.76      0.76       154\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Weak learner (decision stump)\n",
+    "stump = DecisionTreeClassifier(max_depth=2, random_state=42)\n",
+    "\n",
+    "ada = AdaBoostClassifier(\n",
+    "    estimator=stump,\n",
+    "    n_estimators=200,\n",
+    "    learning_rate=0.1,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "ada.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_ada = ada.predict(X_test)\n",
+    "\n",
+    "print(\"AdaBoost Accuracy:\", accuracy_score(y_test, y_pred_ada))\n",
+    "print(classification_report(y_test, y_pred_ada))\n"
    ]
   }
  ],
