--- a/notebooks/03_GradientBoosting.ipynb
+++ b/notebooks/03_GradientBoosting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "id": "5445d5c1",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 20,
    "id": "ddc7d9d0",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 21,
    "id": "c9638282",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 22,
    "id": "11c19729",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 23,
    "id": "e275e557",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "max     67.100000                  2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 24,
    "id": "b113c3be",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 25,
    "id": "afe00143",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 26,
    "id": "c3db6cd3",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 27,
    "id": "7cfd3eea",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
        "max                    2.420000   81.000000    1.000000     6.741701  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,19 +445,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 28,
    "id": "162964a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n"
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 29,
    "id": "51b4a548",
    "metadata": {},
    "outputs": [],
@@ -468,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 30,
    "id": "2a190a08",
    "metadata": {},
    "outputs": [],
@@ -480,52 +479,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 31,
    "id": "6319ac5c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\POWER\\anaconda3\\Lib\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:527: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AdaBoost Accuracy: 0.7597402597402597\n",
+      "Gradient Boosting Accuracy: 0.7467532467532467\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.83      0.79      0.81        99\n",
-      "           1       0.65      0.71      0.68        55\n",
+      "           0       0.83      0.77      0.80        99\n",
+      "           1       0.63      0.71      0.67        55\n",
       "\n",
-      "    accuracy                           0.76       154\n",
-      "   macro avg       0.74      0.75      0.74       154\n",
-      "weighted avg       0.77      0.76      0.76       154\n",
+      "    accuracy                           0.75       154\n",
+      "   macro avg       0.73      0.74      0.73       154\n",
+      "weighted avg       0.76      0.75      0.75       154\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Weak learner (decision stump)\n",
-    "stump = DecisionTreeClassifier(max_depth=2, random_state=42)\n",
-    "\n",
-    "ada = AdaBoostClassifier(\n",
-    "    estimator=stump,\n",
-    "    n_estimators=200,\n",
-    "    learning_rate=0.1,\n",
+    "gb = GradientBoostingClassifier(\n",
+    "    n_estimators=400,\n",
+    "    learning_rate=0.05,\n",
+    "    max_depth=3,\n",
+    "    subsample=0.8,\n",
     "    random_state=42\n",
     ")\n",
     "\n",
-    "ada.fit(X_train, y_train)\n",
+    "gb.fit(X_train, y_train)\n",
     "\n",
-    "y_pred_ada = ada.predict(X_test)\n",
+    "y_pred_gb = gb.predict(X_test)\n",
     "\n",
-    "print(\"AdaBoost Accuracy:\", accuracy_score(y_test, y_pred_ada))\n",
-    "print(classification_report(y_test, y_pred_ada))\n"
+    "print(\"Gradient Boosting Accuracy:\", accuracy_score(y_test, y_pred_gb))\n",
+    "print(classification_report(y_test, y_pred_gb))\n",
+    "\n"
    ]
   }
  ],
